# guard

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
docs/: Gemfile  _config.yml  context-fallbacks.md  effects.md  examples.md  getting-started.md  index.md  policy-language.md  sdk-reference.md
docs/_sass/color_schemes/: guard.scss
docs/_site/: index.html
docs/_site/assets/css/: custom.css  just-the-docs-dark.css  just-the-docs-dark.css.map  just-the-docs-default.css  just-the-docs-default.css.map  just-the-docs-head-nav.css  just-the-docs-light.css  just-the-docs-light.css.map
docs/_site/assets/js/: just-the-docs.js  search-data.json
docs/_site/context-fallbacks/: index.html
docs/_site/effects/: index.html
docs/_site/examples/: index.html
docs/_site/getting-started/: index.html
docs/_site/policy-language/: index.html
docs/_site/sdk-reference/: index.html
docs/assets/css/: custom.css
examples/: balanced.yaml  permissive.yaml  restrictive.yaml
go/: go.mod  guard.go  guard_test.go
python/: README.md  pyproject.toml
python/src/agent_policy_guard/: __init__.py  engine.py  loader.py  match.py  models.py
python/tests/: test_guard.py
spec/: schema.json
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: engine.ts  index.ts  loader.ts  match.ts  models.ts
typescript/tests/: guard.test.ts
