[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-policy-guard"
version = "0.1.0"
description = "Declarative guardrail policies for controlling AI agent autonomy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aymen Furter" },
]
keywords = ["agent", "policy", "guardrails", "hitl", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/agent-policy/guard"
Repository = "https://github.com/agent-policy/guard"
Documentation = "https://agent-policy.github.io/guard/"
Changelog = "https://github.com/agent-policy/guard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_policy_guard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
